Fix #7 and PR #8, where indicator does not align

--- a/stylesheets/tabs.less
+++ b/stylesheets/tabs.less
@@ -252,14 +252,20 @@
   }
 
   .tab-bar .tab.modified:not(:hover) .close-icon {
-      display: block;
-      top: 8px;
-      left: 6px;
-      right: 0;
-      width: 9px;
-      height: 9px;
-      border: 2px solid #0098ff;
-      border-radius: 12px;
+    display:block;
+
+    &:before { display: none; }
+    &:after {
+        content: '';;
+        display: block;
+        position: absolute;
+        top: 3px;
+        left: 3px;
+        width: 10px;
+        height: 10px;
+        border: 2px solid #0098ff;
+        border-radius: 12px;
+    }
   }
 
   .tab-bar .tab:hover .close-icon {
